slider jumps fixed

--- a/Aditii/styles/blocks/_slider.scss
+++ b/Aditii/styles/blocks/_slider.scss
@@ -22,7 +22,8 @@
         grid-column-start: 2;
 
         @media (max-width: 575.98px) {
-            width: 100%;
+            margin: 0 auto;
+            display: block;
         }
     }
 }  
