--- a/Aditii/styles/style.css
+++ b/Aditii/styles/style.css
@@ -148,7 +148,8 @@
 
 @media (max-width: 575.98px) {
   .b-slider__img {
-    width: 100%;
+    margin: 0 auto;
+    display: block;
   }
 }
 
@@ -181,6 +182,18 @@
   line-height: 0.885;
 }
 
+@media (max-width: 575.98px) {
+  .b-sliderAboutProduct__title {
+    height: 106px;
+  }
+}
+
+@media (min-width: 576px) and (max-width: 991.98px) {
+  .b-sliderAboutProduct__title {
+    height: 160px;
+  }
+}
+
 @media (max-width: 991.98px) {
   .b-sliderAboutProduct__title_tablets {
     text-align: center;
@@ -192,6 +205,18 @@
   font-family: "Open Sans", sans-serif;
   color: #ffffff;
   line-height: 1.647;
+}
+
+@media (max-width: 575.98px) {
+  .b-sliderAboutProduct__desc {
+    height: 81px;
+  }
+}
+
+@media (min-width: 576px) and (max-width: 991.98px) {
+  .b-sliderAboutProduct__desc {
+    height: 135px;
+  }
 }
 
 @media (max-width: 991.98px) {
